@@ -56,7 +56,7 @@
 		<service android:name="net.yura.domination.android.GCMIntentService" />
 		<activity android:name="net.yura.domination.android.GCMActivity" android:configChanges="orientation|keyboard|keyboardHidden|screenLayout|uiMode|screenSize|smallestScreenSize" android:windowSoftInputMode="stateAlwaysHidden" android:theme="@android:style/Theme.NoDisplay"/>
 
-        <activity android:name="net.yura.android.AndroidMeActivity"
+        <activity android:name="net.yura.domination.android.GameActivity"
             	  android:launchMode="singleTask"
                   android:label="@string/app_name"
                   android:windowSoftInputMode="adjustResize|stateHidden"
